<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ContactUsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|snap|enterAlways"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/linearLay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="2dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@android:color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@string/long_desc"
                            android:textColor="@color/colorAccent3"
                            android:textSize="18sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/call"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="100dp"
                            android:layout_marginRight="10dp"
                            android:padding="20dp"
                            android:src="@drawable/call" />


                        <ImageView
                            android:id="@+id/fb"
                            android:layout_width="0dp"
                            android:layout_weight="1"                            android:layout_height="100dp"
                            android:layout_marginLeft="@dimen/padd_10"
                            android:layout_marginRight="10dp"
                            android:padding="20dp"
                            android:src="@drawable/fb" />


                        <ImageView
                            android:id="@+id/whatsapp"
                            android:layout_width="0dp"
                            android:layout_weight="1"                            android:layout_height="100dp"
                            android:layout_marginLeft="@dimen/padd_10"
                            android:layout_marginRight="10dp"
                            android:padding="20dp"
                            android:src="@drawable/whatsapp" />

                        <!--
                                                <ImageView
                                                    android:id="@+id/messenger"
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="100dp"
                                                    android:layout_gravity="center"
                                                    android:layout_marginLeft="@dimen/padd_10"
                                                    android:layout_marginRight="10dp"
                                                    android:src="@drawable/messenger" />
                        -->

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layPersonalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_location_on_black_24dp"
                            android:drawablePadding="@dimen/padd_10"
                            android:drawableTint="@color/button_bg"
                            android:gravity="center_vertical"
                            android:text="Address"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textVieWAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="@string/contact_us_address"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_email_black_24dp"
                            android:drawablePadding="@dimen/padd_10"
                            android:drawableTint="@color/button_bg"
                            android:gravity="center_vertical"
                            android:text="Email"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textViewEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="@string/contact_us_email"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:drawablePadding="@dimen/padd_10"
                            android:drawableTint="@color/button_bg"
                            android:gravity="center_vertical"
                            android:text="Customer Care"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textViewPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="@string/contact_us_phone"
                            android:textColor="@android:color/black"
                            android:textSize="18dp" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </ScrollView>


</LinearLayout>